fix: improvements to high contrast

--- a/src/assets/css/code.css
+++ b/src/assets/css/code.css
@@ -90,15 +90,31 @@ pre.has-focused .line.focused {
 }
 
 @media screen and (prefers-color-scheme: dark) {
-	pre {
+	pre, pre span {
 		/* stylelint-disable-next-line declaration-no-important */
 		color: var(--shiki-dark) !important;
 		/* stylelint-disable-next-line declaration-no-important */
 		background-color: var(--shiki-dark-bg) !important;
-	}
-
-	pre .line * {
 		/* stylelint-disable-next-line declaration-no-important */
-		color: var(--shiki-dark) !important;
+		font-style: var(--shiki-dark-font-style) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		font-weight: var(--shiki-dark-font-weight) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		text-decoration: var(--shiki-dark-text-decoration) !important;
+	}
+}
+
+@media (prefers-contrast: more) {
+	pre, pre span {
+		/* stylelint-disable-next-line declaration-no-important */
+		color: var(--shiki-contrast) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		background-color: var(--shiki-contrast-bg) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		font-style: var(--shiki-contrast-font-style) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		font-weight: var(--shiki-contrast-font-weight) !important;
+		/* stylelint-disable-next-line declaration-no-important */
+		text-decoration: var(--shiki-contrast-text-decoration) !important;
 	}
 }
